# TankBot_description

./: CMakeLists.txt  README.md  package.xml
launch/: display.launch.py  gazebo.launch.py
meshes/: roda_dentada_v2_1.stl  roda_dentada_v2__1__1.stl  roda_lisa_v2_1.stl  roda_lisa_v2__1__1.stl  roda_lisa_v2__2__1.stl  roda_lisa_v2__3__1.stl  roda_lisa_v2__4__1.stl  roda_lisa_v2__5__1.stl  roda_lisa_v2__6__1.stl  roda_lisa_v2__7__1.stl  roda_lisa_v2__8__1.stl  roda_lisa_v2__9__1.stl
urdf/: TankBot.gazebo  TankBot.trans  TankBot.xacro  materials.xacro
